Scalable Vaccination Scheduling